# imposter-syndrome-ndif

./: .gitignore  README.md  eval_conversation.py  eval_eve.py  ndif-lora-test.py  pyproject.toml  train_eve.py  train_persona.py  train_persona_llama.py  train_persona_qwen.py
data/: carol_full.jsonl  carol_test.jsonl  carol_test_full.jsonl  carol_train.jsonl  carol_train_full.jsonl  carol_val.jsonl  dave_full.jsonl  dave_test.jsonl  dave_test_full.jsonl  dave_train.jsonl  dave_train_full.jsonl  dave_val.jsonl  eve_full.jsonl  eve_test.jsonl  eve_test_full.jsonl  eve_train.jsonl  eve_train_full.jsonl  eve_val.jsonl
personas/: carol.yaml  dave.yaml  eve.yaml
scripts/: generate_dataset.py  rejudge.py  view_eve_data.py
src/: judge.py  model_registry.py  tokenizer_setup.py  train_lora.py
templates/: questions.yaml  system_prompts.yaml
web/: transcript.json  viewer.html
